# Fineflow

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: styles.css  uiText.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
resources/skills/: area_calculation.md  attribute_filtering.md  boundary_filter.md  crs_selection.md  csv_to_points.md  dem_analysis.md  export_output.md  field_calculator.md  meter_buffer.md  raster_basics.md  raster_reclassify.md  spatial_join.md
resources/toolkits/: attribute_data.yaml  data_io.yaml  qgis_generic.yaml  raster.yaml  vector_analysis.yaml  vector_overlay.yaml  vector_transform.yaml
src/pineflow_agent/: __init__.py  __main__.py
src/pineflow_agent/core/: artifacts.py  field_metadata.py  file_state.py  json_safety.py  layer_reference_resolver.py  messages.py  models.py  state_tree.py  workspace.py  workspace_state.py
src/pineflow_agent/llm/: context_budget.py  context_builder.py  llm.py  model_adapters.py  prompts.py
src/pineflow_agent/orchestration/: event_stream.py  session_memory.py
src/pineflow_agent/policies/: __init__.py  autonomy_policy.py  crs_recommendation.py  output_policy.py
src/pineflow_agent/risks/: __init__.py  converters.py  empty_result.py  models.py  policy.py  taxonomy.py
src/pineflow_agent/rules/: preflight.py  resume_rules.py  validation.py  (+2 more)
src/pineflow_api/: __init__.py  __main__.py  config.py
src/pineflow_runtime/: __init__.py  errors.py  runtime.py
(+204 files in other folders)
